# datasource-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/demo-scraper/: source.json
examples/sources/demo-batch/: source.json
examples/sources/demo-scraper/: source.json
src/datasource_kit/: __init__.py  __main__.py  cli.py  completeness.py  errors.py  ingest.py  journal.py  ledger.py  manifest.py  profile.py  protocols.py  providers.py  rate_limit.py  ratelimit.py  registry.py  report.py  results.py  retry.py  runtime.py  scheduler.py  storage.py  window.py
src/datasource_kit/adapters/: __init__.py  fala.py
tests/: test_cli.py  test_errors.py  test_framework_primitives.py  test_ingest.py  test_journal.py  test_ledger.py  test_manifest.py  test_profile.py  test_protocols.py  test_providers.py  test_rate_limit.py  test_registry.py  test_retry.py  test_runtime.py  test_scheduler.py  test_storage.py
tests/adapters/: test_fala_artifact_store.py
