[project]
name = "datasource-kit"
version = "0.1.0"
description = "Domain-blind ingest framework (archetype + profiles + registry + runtime) that keeps its primitives-library face."
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = []

[project.scripts]
datasource-kit = "datasource_kit.__main__:main"

[project.optional-dependencies]
scheduler = ["apscheduler>=3.10"]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datasource_kit"]
