[project]
name = "datasource-kit"
version = "0.1.0"
description = "Generic, dependency-free toolkit for managing many datasources (batch reference-data updaters and long-running scraper workers)."
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = []

[project.scripts]
datasource-kit = "datasource_kit.cli:main"

[project.optional-dependencies]
# Blob/artifact resolution only; datasource-kit still owns no job queue.
fala = ["fala"]
scheduler = ["apscheduler>=3.10"]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datasource_kit"]
